--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -1,7 +1,7 @@
-$localLightPrimaryColor: #B3E5FC;
-$localPrimaryColor: #03A9F4;
-$localDarkPrimaryColor: #0288D1;
-$localAccentColor: #FF5722;
+$local-primary-color: #03A9F4;
+$local-light-primary-color: #B3E5FC;
+$local-dark-primary-color: #0288D1;
+$local-accent-color: #FF5722;
 
 $darkPrimaryColor: #0288D1;
 $primaryColor: #03A9F4;
@@ -13,19 +13,90 @@ $secondaryTextColor: #727272;
 $dividerColor: #B6B6B6;
 
 
+h1 {
+	font-size: 2.5rem;
+	line-height: 3.75rem;
+	margin: 2.5rem 0 0 0;
+}
+
+h2 {
+	font-size: 2.5rem;
+	line-height: 3.75rem;
+	margin: 2.5rem 0 0 0;
+}
+
+h3 {
+	font-size: 2rem;
+	line-height: 3rem;
+	margin: 2rem 0 0 0;
+}
+
 h4 {
 	font-size: 1.75rem;
+	line-height: 2.63rem;
+	margin: 1.75rem 0 0 0;
+}
+
+h5 {
+	font-size: 1.5rem;
+	line-height: 2.25rem;
+	margin: 1.5rem 0 0 0;
+}
+
+h6 {
+	font-size: 1.25rem;
+	line-height: 1.88rem;
+	margin: 1.25rem 0 0 0;
+}
+
+h1 + p,
+h2 + p,
+h3 + p,
+h4 + p,
+h5 + p,
+h6 + p {
+	margin-top: 0;
+}
+
+h1 + ul,
+h2 + ul,
+h3 + ul,
+h4 + ul,
+h5 + ul,
+h6 + ul {
+	margin-top: 0;
+}
+
+h1 + ol,
+h2 + ol,
+h3 + ol,
+h4 + ol,
+h5 + ol,
+h6 + ol {
+	margin-top: 0;
+}
+
+p,
+ul,
+ol,
+pre,
+code {
+	margin-bottom: 0;
+}
+
+ul, {
+	margin-left: 1.5rem;
 }
 
 a {
-	color: $localAccentColor;
+	color: $local-accent-color;
+
 	&:hover {
-		color: $localPrimaryColor;
+		color: $local-primary-color;
 	}
 }
 
 a.btn {
-	vertical-align: middle;
 	&:hover {
 		color: black;
 	}
@@ -33,40 +104,39 @@ a.btn {
 
 .tags a {
 	display: inline-block;
-	padding: 0;
 	margin-bottom: .2rem;
+	padding: 0;
+
 	:hover {
 		color: black;
 	}
 }
 
 .logo {
-	margin-top: 6px;
 	height: 52px;
+	margin-top: 6px;
 	width: 52px;
+
 	path {
 		fill: white;
 	}
 }
 
-//Bug fix for Materialize v0.95.3
-//.navbar-fixed nav {
-//	overflow: visible;
-//}
-
 nav {
-	background-color: $localDarkPrimaryColor;
+	background-color: $local-dark-primary-color;
 }
 
 .nav-wrapper a {
 	&:hover {
 		color: black;
 	}
+
 	i {
-		position: relative;
 		font-size: 1.3rem;
+		position: relative;
 		right: -0.05em;
 	}
+
 	span {
 		position: relative;
 		top: -0.15em;
@@ -87,101 +157,114 @@ li.disabled {
 
 .tags a {
 	display: inline-block;
-	padding: 0;
 	margin-bottom: .2rem;
+	padding: 0;
+
 	:hover {
 		color: black;
 	}
 }
 
-span {
-	&.tags {
-		float: right;
-	}
-	.badge {
-		float: none;
-		position: relative;
-		right: 0;
-		padding: 4px 6px 4px 6px;
-	}
+//span.header-tags {
+//	float: right;
+//}
+span.list-blog-date {
+	float: right;
+}
+
+span.badge {
+	float: none;
+	padding: 4px 6px 4px 6px;
+	position: relative;
+	right: 0;
 }
 
 span.badge.new::after {
-	content: "";
+	content: '';
 }
 
 .footer-copyright .container a {
 	font-weight: 500;
+
 	&:hover {
 		color: white;
 	}
 }
 
 .header {
-	background-color: $localPrimaryColor;
+	background-color: $local-primary-color;
 	text-align: center;
+
 	h1 {
-		margin-top: 0;
-		margin-bottom: 0;
-		text-align: center;
+		color: #FFFFFF;
 		font-size: 4rem;
-		padding-top: 3rem;
-		color: #FFFFFF;
-	}
-	h2 {
-		margin-top: 0;
 		margin-bottom: 0;
+		margin-top: 0;
+		padding-top: 3rem;
 		text-align: center;
-		font-size: 2rem;
-		padding-bottom: 2rem;
+	}
+
+	h2 {
 		color: #FFFFFF;
+		font-size: 2rem;
+		margin-bottom: 0;
+		margin-top: 0;
+		padding-bottom: 2rem;
+		text-align: center;
 	}
 }
 
 .breadcrumbs {
 	margin-top: 1.5rem;
+
 	a {
 		vertical-align: top;
 	}
 }
 
 .btn {
-	padding-top: 0.1rem;
-	background-color: $localPrimaryColor;
+	background-color: $local-primary-color;
 	margin-bottom: 1rem;
+
 	&:hover {
-		background-color: $localLightPrimaryColor;
+		background-color: $local-light-primary-color;
 	}
 }
 
-.btn span {
-	position: relative;
-	top: -0.1rem;
+i.left {
+	margin-right: 0.5rem;
+}
+
+i.right {
+	margin-left: 0.5rem;
 }
 
 span.badge.new {
-	background-color: $localPrimaryColor;
+	background-color: $local-primary-color;
+	letter-spacing: 1px;
 }
 
 .list-blog-header {
 	position: relative;
+
 	h4 {
 		margin-bottom: 0.5rem;
 	}
 
 	img {
-		display: block;
-		margin-top: 1rem;
 		border-radius: 0.25rem;
 		clear: both;
+		display: block;
+		margin-top: 1rem;
 	}
 }
 
 .pagination {
-	text-align: center;
 	display: inline-block;
+	text-align: center;
+
 	li.active {
-		background-color: $localAccentColor;
+		background-color: $local-accent-color;
 	}
 }
 
@@ -192,17 +275,20 @@ span.badge.new {
 .modular .features,
 .modular .callout {
 	margin-top: 3rem;
+
 	h2 {
-		margin-bottom: 0;
-		font-weight: 500;
 		font-size: 1.75rem;
+		font-weight: 500;
 		line-height: 2rem;
+		margin-bottom: 0;
 	}
+
 	h3 {
-		margin-top: 0;
 		font-size: 1.5rem;
 		line-height: 1.75rem;
+		margin-top: 0;
 	}
+
 	h4 {
 		font-size: 1.5rem;
 	}
@@ -219,6 +305,7 @@ span.badge.new {
 
 .features.big .feature-content {
 	padding-right: 2rem;
+
 	&.push {
 		margin-left: 4rem;
 	}
@@ -226,25 +313,29 @@ span.badge.new {
 
 .features.big .feature {
 	margin: 2rem 0;
+
 	h4 {
-		text-align: left;
 		margin: 0;
+		text-align: left;
 	}
+
 	i {
+		color: $local-accent-color;
 		float: left;
 		font-size: 3rem;
-		color: $localAccentColor;
 	}
 }
 
 .features.small .feature {
 	margin-top: 2rem;
+
 	h4 {
 		font-size: 1.125rem;
 	}
+
 	i {
+		color: $local-accent-color;
 		font-size: 3rem;
-		color: $localAccentColor;
 	}
 }
 
@@ -256,14 +347,15 @@ span.badge.new {
 
 .feature-content {
 	p {
-		text-align: left;
 		margin: 0;
+		text-align: left;
 	}
 }
 
 .callout {
 	background: #F0F0F0;
 	padding: 2rem 2rem;
+
 	.align-right {
 		float: right;
 		margin-left: 1rem;
@@ -271,7 +363,7 @@ span.badge.new {
 }
 
 footer.page-footer {
-	background-color: $localPrimaryColor;
+	background-color: $local-primary-color;
 }
 
 .centered {
@@ -286,11 +378,67 @@ footer.page-footer {
 }
 
 .collapsible-header {
-	//display: inline-table;
+	height: auto;
+
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		display: table-cell;
+		margin: 0;
+		padding-bottom: 0.5em;
+		padding-top: 0.5em;
+		vertical-align: top;
+	}
+
+	i {
+		font-size: inherit;
+		line-height: inherit;
+		margin-right: 0.5em;
+		width: auto;
+	}
 }
 
 .collapsible-body {
-	ul {
-		padding-left: 2em;
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h5,
+	h6 {
+		padding-left: 2rem;
+	}
+
+	iframe,
+	img {
+		padding-left: 2rem;
+	}
+
+	p:first-child {
+		padding-top: 1.5em;
+	}
+
+	p:last-child {
+		padding-bottom: 1.5em;
+	}
+
+	p {
+		padding: 0 2rem 1em 2em;
+	}
+
+	ul:first-child {
+		padding-top: 1.5em;
+	}
+
+	ul:last-child {
+		padding-bottom: 1.5em;
+	}
+
+	ul,
+	ol {
+		padding: 0 2rem 1em 2em;
 	}
 }
