Fix for icon font vertical alignment problems
The Materialize Framework bumped up the icon font size to be larger than the font-size, but using the same line-height, in buttons.

--- a/css-compiled/theme.css
+++ b/css-compiled/theme.css
@@ -159,6 +159,13 @@ span.badge.new::after {
   .btn:hover {
     background-color: #B3E5FC; }
 
+.btn i,
+.btn-large i,
+.btn-floating i,
+.btn-large i,
+.btn-flat i {
+  font-size: inherit; }
+
 i.left {
   margin-right: 0.5rem; }
 
