--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+0<!DOCTYPE html>
 <html lang="en">
 	<head>
 
@@ -13,13 +13,13 @@
 
 			<link rel="icon" type="image/png" href="{{ theme_url }}/images/favicon.png" />
 			{% block stylesheets %}
-				{% do assets.add('theme://css-compiled/theme.css',98) %}
+				{% do assets.addCss('theme://css-compiled/theme.css',98) %}
 				{% do assets.addCss('theme://css/custom.css',100) %}
 			{% endblock %}
 			{{ assets.css() }}
 
 			{% block javascripts %}
-				{% do assets.add('jquery', 101) %}
+				{% do assets.addJs('jquery', 101) %}
 			{% endblock %}
 			{{ assets.js() }}
 
